[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/options.gd" type="Script" id=1]
[ext_resource path="res://Themes/MenuThemes.tres" type="Theme" id=2]
[ext_resource path="res://Audio/Suck 2.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/BigCarTheft.mp3" type="AudioStream" id=4]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="EffectsLable" type="Label" parent="."]
margin_left = 780.0
margin_top = 369.0
margin_right = 824.0
margin_bottom = 383.0
theme = ExtResource( 2 )
text = "Effects"

[node name="MasterLable" type="Label" parent="."]
margin_left = 713.0
margin_top = 369.0
margin_right = 757.0
margin_bottom = 383.0
theme = ExtResource( 2 )
text = "Master"

[node name="OptionsOverlay" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 603.0
color = Color( 0.172549, 0.164706, 0.164706, 0.337255 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -24.5
margin_right = 52.0
margin_bottom = 24.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Fullscreen" type="Button" parent="VBoxContainer"]
margin_right = 104.0
margin_bottom = 17.0
theme = ExtResource( 2 )
text = "Fullscreen"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 104.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = "Back"

[node name="MasterSlider" type="VSlider" parent="."]
margin_left = 727.0
margin_top = 265.0
margin_right = 743.0
margin_bottom = 361.0
min_value = -78.0
max_value = 6.0
step = 6.0
value = 6.0

[node name="EffectsSlider" type="VSlider" parent="."]
margin_left = 797.0
margin_top = 263.0
margin_right = 813.0
margin_bottom = 359.0
min_value = -78.0
max_value = 6.0
step = 6.0
value = 6.0

[node name="MusicSlider" type="VSlider" parent="."]
margin_left = 864.0
margin_top = 263.0
margin_right = 880.0
margin_bottom = 359.0
min_value = -78.0
max_value = 6.0
step = 6.0
value = 6.0

[node name="MusicLable" type="Label" parent="."]
margin_left = 855.0
margin_top = 369.0
margin_right = 896.0
margin_bottom = 386.0
theme = ExtResource( 2 )
text = "Music"

[node name="SoundLable" type="Label" parent="."]
margin_left = 784.0
margin_top = 218.0
margin_right = 829.0
margin_bottom = 235.0
theme = ExtResource( 2 )
text = "Sound"

[node name="TestEffects" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0
bus = "Effects"

[node name="TestMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[connection signal="child_entered_tree" from="OptionsOverlay" to="." method="_on_OptionsOverlay_child_entered_tree"]
[connection signal="pressed" from="VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
[connection signal="drag_ended" from="MusicSlider" to="." method="_on_MusicSlider_drag_ended"]
[connection signal="drag_started" from="MusicSlider" to="." method="_on_MusicSlider_drag_started"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
